# simple-svg-to-png

./: .gitignore  Privacy.md  README.md
Simple SVG to PNG/: ContentView.swift  Simple_SVG_to_PNGApp.swift  resvg
Simple SVG to PNG.xcodeproj/: project.pbxproj
Simple SVG to PNG.xcodeproj/xcshareddata/xcschemes/: Simple SVG to PNG.xcscheme
Simple SVG to PNG.xcodeproj/xcuserdata/zacharytirrell.xcuserdatad/xcschemes/: xcschememanagement.plist
Simple SVG to PNG/Assets.xcassets/AccentColor.colorset/: Contents.json
Simple SVG to PNG/Assets.xcassets/AppIcon.appiconset/: Contents.json
Simple SVG to PNG/ResvgBridge.xcframework/macos-arm64_x86_64/Headers/: resvg_bridge.h
resvg_bridge/: Cargo.toml
resvg_bridge/ResvgBridge.xcframework/: Info.plist
resvg_bridge/include/: module.modulemap
resvg_bridge/src/: lib.rs
